<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlOptionsActivity">

    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/deactivate_motion_detector"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/activate_motion_detector"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linear2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/deactivate_flame"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/activate_flame_detector"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linear3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/deactivate_smoke"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/activate_smoke_detector"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circular_drawable"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/get_temperature"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circular_drawable"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/get_paired_address_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable1"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/set_default_control_options"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable1"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/connect_to_bluetooth_device"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp18" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circular_drawable1"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/notifications"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp18" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>